typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity1.ts:1:10
  |
1 | new Date<A;
  |          ^

